<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/cardBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/lesson_card_style"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lessonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lesson_name_style"
                android:paddingStart="8dp"
                android:paddingBottom="4dp"
                android:text="@string/name_of_lesson"
                android:textColor="#F0000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lessonTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="4dp"
                android:text="@string/teachers_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lessonTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:text="@string/time_of_lesson"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lessonClassroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:gravity="end"
                android:padding="4dp"
                android:text="@string/num_of_classroom"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/view"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardBackground"
        app:srcCompat="@drawable/lection_three" />

    <TextView
        android:id="@+id/lessonType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/type_of_lesson"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>